--- a/gange/src/Components/signin.css
+++ b/gange/src/Components/signin.css
@@ -3,7 +3,10 @@ section{
     width: 100%;
     top: 60px;
     min-height:100vh;
-    margin-bottom: 30px;   
+    margin-bottom: 30px;  
+}
+#heading{
+    color:#55abbe
 }
 
 .sign_container{
@@ -12,6 +15,7 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .sign_header img{
@@ -25,6 +29,7 @@ section{
     padding: 10px 30px;
     margin-top: -10px;
     border-radius: 5px;
+    background-color: rgb(221, 245, 224);
 }
 
 .sign_form h1{
@@ -54,14 +59,14 @@ section{
     margin-top: 7px;
     margin-bottom: 23px;
     width: 100%;
-    background: rgb(219, 151, 48);
+    background: rgb(9, 164, 25);
     cursor: pointer;
     border:1px solid #9c7e31;
     height: 29px;
     outline: none;
     border-radius: 3px;
     color: #111;
-    background: linear-gradient(to bottom,#f7dfa5,#f0c14b)
+    background: linear-gradient(to bottom,#67f41a,#07791a)
 }
 
 .sign_form input:focus{
